<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdviewfrelancedisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/shapes"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/deletefreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/sharefreelance"
                android:src="@drawable/delete_icon"
                android:visibility="gone"
                android:layout_margin="7dp"/>

            <ImageView
                android:id="@+id/sharefreelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_margin="7dp"/>

            <TextView
                android:id="@+id/f_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/f_topic"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_topic"
                android:layout_margin="5dp"
                android:text="@string/f_desc"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_desc"
                android:layout_margin="5dp"
                android:text="@string/f_work"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/f_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_work"
                android:layout_margin="5dp"
                android:text="@string/f_skills"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/f_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_skills"
                android:layout_margin="5dp"
                android:text="@string/f_deadline"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/f_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_deadline"
                android:layout_margin="5dp"
                android:text="@string/f_salary"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/f_whychoosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_salary"
                android:layout_margin="5dp"
                android:hint="@string/f_userques"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <Button
                android:id="@+id/freelanceapplybtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_whychoosed"
                android:layout_margin="5dp"
                android:text="@string/f_apply" />

            <Button
                android:id="@+id/freelancesubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_whychoosed"
                android:layout_margin="5dp"
                android:text="Submit"
                android:visibility="gone" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>